--- a/src/util/style.css
+++ b/src/util/style.css
@@ -1,30 +1,65 @@
-*{
+* {
     margin: 0;
     padding: 0;
     text-decoration: none;
-}
-
-
-header{
-    background-color: #ccff33;
-    height: 80px;
-
-}
-
-
-#life {
-    width: 40px;
+  }
+  
+  header {
+    background-color:#663d00;
+    height: 60px;
+  }
+  
+  #life {
+    width: 30px; 
     height: auto;
     position: absolute;
-    top: 20px;
-    left: 30px;
-}
+    top: 15px; 
+    left: 20px;
+  }
 
-#contador-vida {
+  main{
+    background-color: #663d00;
+    height: 650px;
+  }
+  #pergunta{
+    text-align: center;
+  }
+
+  #opcoes-respostas{
+    margin-top: 30px;
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+    gap: 20px;
+  }
+
+  #opcoes-respostas button {
+    width: 200px; 
+    padding: 10px; 
+    background-color: ;
+  }
+  #contador-vida {
     position: absolute;
-    top: 25px;
-    left: 90px; 
-    font-size: 24px;
+    top: 20px; 
+    left: 60px;
+    font-size: 18px; 
     font-weight: bold;
     color: #333;
+  }
+  
+  
+  @media (min-width: 768px) {
+    header {
+      height: 80px; 
+    }
+    #life {
+      width: 40px; 
+      top: 20px; 
+      left: 30px; 
+    }
+    #contador-vida {
+      top: 25px; 
+      left: 90px; 
+      font-size: 24px; 
+  }
 }
